# MiAZ

./: .buildconfig  .gitignore  AGENTS.md  AppImageBuilder.yml  CHANGELOG.md  CLAUDE.md  Changelog.md  LICENSE  Makefile  MiAZ.doap  README  README.adoc  README.md  VERSION  changelog  com.github.t00m.MiAZ.json  control  files  io.github.t00m.MiAZ.json  local.sh  meson.build  meson_options.txt  miaz.spec  miaz_appimage.sh  miaz_appimage_create.sh  miaz_appimage_extract.sh  miaz_appimage_repackage.sh  notes.txt  pyproject.toml  python-deps.json  python3-miaz.postinst.debhelper  python3-miaz.prerm.debhelper  requirements.txt  rules  setup.py  stdeb.cfg  test.sh  watch
MiAZ/: env.in  main.py  meson.build  miaz.gresource.xml  miaz.in  miaz.py
MiAZ/backend/: __init__.py  config.py  controller.py  data.py  dr.py  env.py  log.py  meson.build  models.py  pluginsystem.py  projects.py  repo.py  repository.py  stats.py  status.py  util.py  util.py.new  watcher.py  webserver.py
MiAZ/backend/config/: __init__.py  settings.py
MiAZ/backend/models/: __init__.py  collection.py  person.py  purpose.py
MiAZ/data/: myaz-collections.json
MiAZ/data/docs/: THANKS  VERSION
MiAZ/data/plugins/: delete.py  export2csv.plugin  export2csv.py  export2dir.py  export2text.py  export2zip.py  massrename.py  menurepo.py  projmgt.py  renameitem.py  stats.plugin  stats.py  systemmenu.py  viewitem.plugin  viewitem.py
MiAZ/data/po/: miaz.pot
MiAZ/data/po/es_ES.UTF-8/LC_MESSAGES/: miaz.mo  miaz.po
MiAZ/data/resources/: MiAZ-countries.json  MiAZ-groups.json  MiAZ-purposes.json  MiAZ-subgroups.json  com.github.t00m.MiAZ.desktop  miaz-collections.json  miaz-countries.json  miaz-extensions.json  miaz-languages.json  miaz-purposes.json
MiAZ/frontend/: meson.build
MiAZ/frontend/console/: app.py  gui.py  meson.build
MiAZ/frontend/desktop/: __init__.py  actions.py  app.py  app.py.orig  factory.py  gui.py  help.py  icons.py  meson.build  settings.py  uihelpers.py  util.py  widgets.py
MiAZ/frontend/desktop/services/: actions.py  dialogs.py  factory.py  help.py  icm.py  pluginsystem.py  workflow.py
MiAZ/frontend/desktop/widgets/: __init__.py  about.py  about.py.orig  assistant.py  browser.py  button.py  collections.py  columnview.py  columnview_workspace.py  columnviews.py  configview.py  countries.py  dialgos2.py  dialogs.py  docbrowser.py  dr.py  extensions.py  filechooser.py  languages.py  listview.py  mainwindow.py  menu.py  menubutton.py  meson.build  organizations.py  pages.py  pluginuimanager.py  purposes.py  rename.py  row.py  sandbox.py  searchbar.py  selector.py  settings.py  sidebar.py  stack.py  statusbar.py  treeview.py  views.py  webbrowser.py  (+7 more)
MiAZ/src/: backend.py  env.py  main.py  util.py
data/: com.github.t00m.MiAZ.appdata.xml.in  com.github.t00m.MiAZ.desktop.in  com.github.t00m.MiAZ.gschema.xml  com.github.t00m.MiAZ.metainfo.xml.in  io.github.t00m.MiAZ.desktop  io.github.t00m.MiAZ.desktop.in  io.github.t00m.MiAZ.gschema.xml  io.github.t00m.MiAZ.metainfo.xml.in  meson.build
data/docs/: NOTES.adoc  NOTES.md  NOTES.txt  PLUGIN-CATEGORIZATION-ID.adoc  PLUGIN-CATEGORIZATION-ID.md  PLUGIN-CATEGORIZATION.adoc  PLUGIN-CATEGORIZATION.md  README  README.adoc  README.md  TRANSLATING.md  VERSION  VERSION.deprecated  meson.build
data/examples/user_plugins/: hello.plugin  hello.py  scan.py  timelineseq.plugin  timelineseq.py
data/examples/user_plugins/hello/: hello.plugin  hello.py
data/icons/: meson.build
data/plugins/: export2text.plugin  export2zip.plugin  export2zip.py  massrename.plugin  massrename.py  menurepo.plugin  renameitem.plugin  renameitem.py  viewitem.py
data/resources/: MiAZ-extensions.json  MiAZ-languages.json  MiAZ-people.json  com.github.t00m.MiAZ.desktop  io.github.t00m.MiAZ.desktop  meson.build  miaz.gresource.xml
data/resources/conf/: MiAZ-groups.json  MiAZ-people.json  MiAZ-purposes.json
data/resources/icons/: meson.build
data/resources/icons/hicolor/: meson.build
data/resources/plugins/: adddir.py  adddoc.plugin  adddoc.py  delete.py  export2csv.plugin  export2csv.py  export2dir.plugin  export2dir.py  export2text.py  export2zip.plugin  export2zip.py  massrename.plugin  massrename.py  menurepo.py  projmgt.plugin  projmgt.py  renameitem.plugin  renameitem.py  repoinfo.plugin  repoinfo.py  scan.plugin  scan.py  scripts.plugin  scripts.py  sidebartgb.plugin  sidebartgb.py  viewitem.plugin  viewitem.py
data/resources/plugins/HelloWorld/: helloworld.plugin  helloworld.py
data/resources/plugins/MiAZAddDirectory/: adddir.plugin
data/resources/plugins/MiAZAddFromDir/: adddir.plugin  adddir.py
data/resources/plugins/MiAZColumnVisibility/: colvis.plugin  colvis.py
data/resources/plugins/MiAZCopy2Clipboard/: copy2clipboard.plugin  copy2clipboard.py
data/resources/plugins/MiAZDeleteDoc/: delete.plugin  delete.py
data/resources/plugins/MiAZExport2CSV/: export2csv.plugin  export2csv.py
data/resources/plugins/MiAZExport2Dir/: export2dir.plugin  export2dir.py
data/resources/plugins/MiAZExport2Text/: export2text.plugin  export2text.py
data/resources/plugins/MiAZExport2Zip/: export2zip.plugin  export2zip.py
data/resources/plugins/MiAZImportDoc/: adddoc.plugin  adddoc.py
data/resources/plugins/MiAZImportFromDirectory/: adddir.plugin  adddir.py
data/resources/plugins/MiAZImportFromScan/: scan.plugin  scan.py
data/resources/plugins/MiAZMassRename/: massrename.plugin  massrename.py
data/resources/plugins/MiAZPeriodicity/: periodicity.plugin  periodicity.py
data/resources/plugins/MiAZProjectMgt/: projmgt.plugin  projmgt.py
data/resources/plugins/MiAZRenameDoc/: renameitem.plugin  renameitem.py
data/resources/plugins/MiAZSidebarRepoSwitcher/: reposwitcher.plugin  reposwitcher.py
data/resources/plugins/MiAZSidebarTB/: sidebartgb.plugin  sidebartgb.py
data/resources/plugins/MiAZSidebarToggleButtonPlugin/: sidebartgb.plugin  sidebartgb.py
data/resources/plugins/MiAZTimelineJS/: timelinejs.plugin  timelinejs.py
data/resources/plugins/MiAZViewDoc/: viewitem.plugin  viewitem.py
data/resources/plugins/MiAZWSFont/: wsfont.plugin  wsfont.py
(+136 files in other folders)
